--- a/SU17Team2ACMECourierServiceApplication/.classpath
+++ b/SU17Team2ACMECourierServiceApplication/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/eclipselink.jar"/>
 	<classpathentry kind="lib" path="lib/javax.persistence_2.1.1.v201509150925.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="lib/LGoodDatePicker-10.2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
